templates/vnet-complete.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "type": "string",
      "defaultValue": "[concat('vnet-', uniqueString(resourceGroup().id))]",
      "metadata": {
        "description": "Name of the Virtual Network"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources"
      }
    },
    "addressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "Address prefix for the Virtual Network"
      }
    },
    "appServiceSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "Address prefix for App Service subnet"
      }
    },
    "databaseSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.2.0/24",
      "metadata": {
        "description": "Address prefix for Database subnet"
      }
    },
    "storageSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.3.0/24",
      "metadata": {
        "description": "Address prefix for Storage subnet"
      }
    },
    "managementSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.4.0/24",
      "metadata": {
        "description": "Address prefix for Management subnet"
      }
    }
  },
  "variables": {
    "vnetName": "[parameters('vnetName')]",
    "appServiceSubnetName": "app-service-subnet",
    "databaseSubnetName": "database-subnet",
    "storageSubnetName": "storage-subnet",
    "managementSubnetName": "management-subnet",
    "nsgAppServiceName": "[concat('nsg-', variables('appServiceSubnetName'))]",
    "nsgDatabaseName": "[concat('nsg-', variables('databaseSubnetName'))]",
    "nsgStorageName": "[concat('nsg-', variables('storageSubnetName'))]",
    "nsgManagementName": "[concat('nsg-', variables('managementSubnetName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2021-05-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('appServiceSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('appServiceSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppServiceName'))]"
              },
              "delegations": [
                {
                  "name": "Microsoft.Web.serverFarms",
                  "properties": {
                    "serviceName": "Microsoft.Web/serverFarms"
                  }
                }
              ]
            }
          },
          {
            "name": "[variables('databaseSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('databaseSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDatabaseName'))]"
              }
            }
          },
          {
            "name": "[variables('storageSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('storageSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgStorageName'))]"
              }
            }
          },
          {
            "name": "[variables('managementSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('managementSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgManagementName'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppServiceName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDatabaseName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgStorageName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgManagementName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-05-01",
      "name": "[variables('nsgAppServiceName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHTTPSInbound",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow HTTPS traffic to App Service"
            }
          },
          {
            "name": "AllowHTTPInbound",
            "properties": {
              "priority": 1010,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "80",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow HTTP traffic to App Service"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "priority": 4000,
              "access": "Deny",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Deny all other inbound traffic"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-05-01",
      "name": "[variables('nsgDatabaseName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowSQLInbound",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "1433",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('appServiceSubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "description": "Allow SQL traffic from App Service subnet"
            }
          },
          {
            "name": "AllowManagementInbound",
            "properties": {
              "priority": 1010,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "22",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('managementSubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "description": "Allow SSH from management subnet"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "priority": 4000,
              "access": "Deny",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Deny all other inbound traffic"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-05-01",
      "name": "[variables('nsgStorageName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHTTPSInbound",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow HTTPS traffic to Storage"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "priority": 4000,
              "access": "Deny",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Deny all other inbound traffic"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-05-01",
      "name": "[variables('nsgManagementName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowSSHInbound",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "22",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow SSH for management"
            }
          },
          {
            "name": "AllowRDPInbound",
            "properties": {
              "priority": 1010,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "3389",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Allow RDP for management"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "priority": 4000,
              "access": "Deny",
              "direction": "Inbound",
              "destinationPortRange": "*",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "description": "Deny all other inbound traffic"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "vnetName": {
      "type": "string",
      "value": "[variables('vnetName')]"
    },
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
    },
    "appServiceSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('appServiceSubnetName'))]"
    },
    "databaseSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('databaseSubnetName'))]"
    },
    "storageSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('storageSubnetName'))]"
    },
    "managementSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('managementSubnetName'))]"
    },
    "appServiceSubnetName": {
      "type": "string",
      "value": "[variables('appServiceSubnetName')]"
    },
    "databaseSubnetName": {
      "type": "string",
      "value": "[variables('databaseSubnetName')]"
    },
    "storageSubnetName": {
      "type": "string",
      "value": "[variables('storageSubnetName')]"
    },
    "managementSubnetName": {
      "type": "string",
      "value": "[variables('managementSubnetName')]"
    }
  }
}
